--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,18 +5,28 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+margin: 0;
 }
 
-nav{
-  float: left;
+.blue-background{
+color:#06365f;
+height: 50%;
 }
+
+.brand{
+float: right;
+position: absolute;
+margin:68px;
+}
+
 .clear-fix{
 clear: both;
 }
 
-#phone{
-  float: left;
-
+.phone-float{
+float: left;
+margin: 68px;
+margin-right: 24px;
+margin-left:120px;
 }
