Adjusting positioning of description section

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -38,13 +38,17 @@ h2 {
   top: 200px;
 }
 #header {
-  left: 400px;
+  left: 360px;
   top: 220px;
 }
 #description {
-  left: 400px;
-  top: 350px;
+  left: 360px;
+  top: 320px;
+  width: 500px;
 }
 #text {
-  padding: 10px 30px;
+  padding: 12px 45px;
+}
+#download-links {
+  padding-top: 20px;
 }
