Links main.css + box-sizing in css

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,6 +4,10 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+    box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
