adds font-smoothing in css

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,6 +8,11 @@ light blue: #1c5380
     box-sizing: border-box;
 }
 
+html {
+	-webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
