--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,11 +9,11 @@ light blue: #1c5380
 }
 
 html {
-	-webkit-font-smoothing: antialiased;
+    -webkit-font-smootshing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
 }
