--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,73 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header-container {
+  background-color: #1c5380;
+}
+
+.home-container {
+  width: 5%;
+  padding: 1%;
+  color: white;
+  font-size: 0.8em;
+  font-weight: bold;
+  text-align: center;
+}
+
+.beveled {
+  border: 1px solid #104672;
+  background: #286393;
+  border-radius: 5%;
+  box-shadow: inset 3px 3px 3px rgba(0,0,0,.1), inset -2px -2px 3px rgba(0,0,0,.1), 2px 2px 10px rgba(0,0,0,.1);
+  }
+
+.home-container img {
+  width: 30%;
+  margin-right: 5%;
+}
+
+.home-container p {
+  display: block;
+}
+
+.info-container {
+  width: 35%;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 40px;
+}
+
+.info-container h2 {
+  color: #06365f;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.text-info-container {
+  margin: 30px 0;
+}
+
+.info-container p {
+  font-size: 0.9em;
+  margin: 10px 0;
+}
+
+.footer-container {
+  text-align: center;
+  margin: 50px 0;
+}
+
+.footer-container li {
+  display: inline;
+  margin: 0 10px;
+  color: #1c5380;
+  font-weight: bold;
+  font-size: 0.9em;
+  text-transform: uppercase;
+}
+
+.footer-container li:last-child {
+  color: #B2B2B2;
+}
