--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,4 +1,8 @@
 /*
+// Base styles
+// -------------------------------------------------- */
+
+/*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
@@ -16,4 +20,51 @@ html {
 body {
     font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
+}
+
+/*
+// Main styles
+// -------------------------------------------------- */
+
+.content-wrapper {
+    max-width: 900px;
+    margin: 0 auto 30px;
+}
+
+.clearfix:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.main-img-wrapper {
+    float: left;
+}
+
+.main-content-wrapper {
+    width: 55%;
+    float: right;
+}
+
+footer {
+    text-align: center;
+}
+
+.footer-nav {
+    display: inline-block;
+}
+
+.footer-nav ul {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 0;
+    text-align: center;
+}
+
+.footer-nav ul li {
+    display: inline-block;
+}
+
+.copyright-print {
+    display: inline-block;
 }
