--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,47 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* Reset someone elements*/
+h1{
+  display: block;
+    font-size: 2em;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+/* General CSS */
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  font-weight: 500;
+}
+
+h1 {
+  color: #06365f;
+}
+
+/* CSS Specific */
+
+#blue-color {
+  height: 40vh;
+  background-color:  #1c5380;
+}
+
+#grey-color{
+  height: 60vh;
+  background-color: #efefef;
+}
+
+
+
+#left-section{
+  width: 40vw;
+}
+
+#right-section{
+  display: inline-block;
+  width: 60vw;
 }
