--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -55,7 +55,7 @@ padding-bottom: 1px;
 margin-top: 200px;
 margin-left: 575px;
 margin-right: 200px;
-box-shadow: 0px 11px 17px -6px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 10px -6px rgba(0,0,0,0.75);
 float: left;
 position: absolute;
 background-color: white;
@@ -72,4 +72,8 @@ h1{
     float: right;
     position: absolute;
     margin-left: 20px;
+}
+
+ul {
+    float: left;
 }
