--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -14,6 +14,7 @@ main {
   bottom: 0;
   left: 25%;
   right: 25%;
+  width: 855px;
 }
 h2 {
   color: #06365f;
@@ -55,11 +56,23 @@ h2 {
   padding-right: 15px;
 }
 #footer {
-  display: inline-block;
-  bottom: 0px;
+  top: 370px;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 #footer-links a {
   padding: 0 10px;
   color: #1c5380;
   text-decoration: none;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+#copyright {
+  padding-left: 30px;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.7em;
+  color: #AAA;
 }
