--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -32,20 +32,20 @@ h2 {
 }
 #background {
   width: 100%;
-  height: 400px;
-  background: #1c5380;
+  height: 300px;
+  background: linear-gradient(to bottom, #567D9F, #386286, #1c5380);
   position: absolute;
 }
 #phones {
-  top: 200px;
+  top: 100px;
 }
 #header {
   left: 360px;
-  top: 220px;
+  top: 120px;
 }
 #description {
   left: 360px;
-  top: 320px;
+  top: 220px;
   width: 500px;
 }
 #text {
@@ -56,7 +56,7 @@ h2 {
   padding-right: 15px;
 }
 #footer {
-  top: 370px;
+  top: 270px;
   left: 0;
   right: 0;
   text-align: center;
@@ -67,7 +67,7 @@ h2 {
   text-decoration: none;
   font-weight: 600;
   text-transform: uppercase;
-  font-size: 0.7em;
+  font-size: 0.8em;
 }
 #copyright {
   padding-left: 30px;
