--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,18 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: blue;
+}
+
+header {
+  float: right;
+}
+
+aside img {
+  float: left;
+}
+
+main {
+  box-sizing: border-box;
+  float: right;
 }
