--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -23,7 +23,7 @@ body {
 } 
 
 .top{
-  background:#1c5380 ;
+  background-image: url(../images/bgtile.png);
   height: 300px;
 }
 
@@ -51,9 +51,9 @@ body {
   }
 
 .button{
-  background:#1c5380;
-  border:1px solid #06365f;
-  box-shadow: 2px 2px 10px 0 #06365f;
+  background-image: url(../images/bgtile.png);
+  border:1px solid #1c5380;
+  box-shadow: 2px 2px 10px 0 #1c5380;
   border-radius: 3px;
   color: white;
   margin-top: 20px;
@@ -70,13 +70,20 @@ body {
 
 .description{
   background: white;
+  border-radius:8px;
+  height: 350px;
+  color: #06365f;
+}
+
+.border{
+  position: relative;
+  top:5px;
+  height: 250px;
   padding: 10px 35px;
   border-width: 1px;
   border-style: solid;
-  border-image: linear-gradient(to bottom,#1c5380,white)1 100%;
-  border-radius:10px;
-  height: 400px;
-  color: #06365f;
+  border-image: linear-gradient(to bottom,grey,white)1 100%;
+  /*box-shadow: 2px 2px 10px 0 grey; */
 }
 
 .reduction{
