--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -79,12 +79,17 @@ body {
   position: relative;
   top:5px;
   height: 250px;
-  padding: 10px 35px;
-  border-width: 1px;
-  border-style: solid;
-  border-image: linear-gradient(to bottom,grey,white)1 100%;
-  /*box-shadow: 2px 2px 10px 0 grey; */
+  border:1px solid transparent;
+  box-shadow: 10px 0 5px -10px rgb(212, 212, 212);
 }
+
+.border2{
+  padding: 10px 35px;
+  height: 230px;
+  border:1px solid transparent;
+  box-shadow: -10px 0 5px -10px rgb(212, 212, 212);
+}
+
 
 .reduction{
   width: 45%;
