--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -80,14 +80,14 @@ body {
   top:5px;
   height: 250px;
   border:1px solid transparent;
-  box-shadow: 10px 0 5px -10px rgb(212, 212, 212);
+  box-shadow: 10px 0 5px -10px #1c5380;
 }
 
 .border2{
   padding: 10px 35px;
   height: 230px;
   border:1px solid transparent;
-  box-shadow: -10px 0 5px -10px rgb(212, 212, 212);
+  box-shadow: -10px 0 5px -10px #1c5380;
 }
 
 
