--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -104,6 +104,11 @@ footer li {
   font-weight: 600;
 }
 
+footer a:link, a:visited, a:hover {
+  text-decoration: none;
+  color:  #1c5380;
+}
+
 #copyright {
   padding: 20px;
   color: #888;
