--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -90,9 +90,10 @@ aside {
 }
 
 footer ul {
-  width: 800px;
+  font-size: 12px;
   padding: 0;
-  margin: 50px auto;
+  margin: 60px 30px 0 410px;
+  float: left;
 }
 
 footer li {
@@ -110,6 +111,10 @@ footer a:link, a:visited, a:hover {
 }
 
 #copyright {
-  padding: 20px;
-  color: #888;
+  font-size: 12px;
+  padding: 10px;
+  margin: 60px 410px 0 0;
+  font-weight: 600;
+  color: #b1b1b1;
+  float: left;
 }
