--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -16,22 +16,21 @@ body {
 
 .phones-container {
   position: absolute;
-  top: 100px;
-  left: 100px;
-}
-
-#phones-img {
-  width: 100%;
+  top: 15%;
+  left: 15%;
 }
 
 .main-container {
-  width: 50%;
-  float: right;
+  position: absolute;
+  top: 17%;
+  left: 45%;
+  right: 15%;
 }
 
 .home-container {
-  width: 5%;
-  padding: 1%;
+  float: right;
+  width: 15%;
+  padding: 5px;
   color: white;
   font-size: 0.8em;
   font-weight: bold;
@@ -45,21 +44,12 @@ body {
   box-shadow: inset 3px 3px 3px rgba(0,0,0,.1), inset -2px -2px 3px rgba(0,0,0,.1), 2px 2px 10px rgba(0,0,0,.1);
   }
 
-.home-container img {
-  width: 30%;
-  margin-right: 5%;
-}
-
-.home-container p {
-  display: block;
-}
-
 .info-container {
-  width: 45%;
   background-image: url("../images/frame.png");
-  background-size: cover;
+  background-size: auto;
   background-repeat: no-repeat;
   padding: 40px;
+  margin-top: 20px;
 }
 
 .info-container h2 {
@@ -73,15 +63,12 @@ body {
 }
 
 .info-container p {
-  font-size: 0.9em;
   margin: 10px 0;
 }
 
-#store-android-img {
-  margin: 0 0 0 20px;
-}
+#store-android-img { margin: 0 0 0 20px; }
 
-.clear-both { clear: both ;}
+.wall-container { height: 350px;}
 
 .footer-container {
   text-align: center;
@@ -97,6 +84,4 @@ body {
   text-transform: uppercase;
 }
 
-.footer-container li:last-child {
-  color: #B2B2B2;
-}
+.footer-container li:last-child { color: #B2B2B2; }
