--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -77,6 +77,7 @@ main button#login{
   font-size: 0.9em;
   text-align: right;
   margin: 20px 20px 0 0;
+  cursor: pointer;
 }
 
 main button#login img {
