--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,8 +7,6 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  //height: 100%;
-  //background: linear-gradient(180deg, #1c5380 50%, white 50%);
 }
 
 
@@ -22,6 +20,16 @@ body {
   z-index: -1;
 }
 
+.background-white {
+  position:fixed;
+  bottom: 0;
+  left: 0;
+  height:55%;
+  width:100%;
+  background: linear-gradient(0deg, white, rgba(255, 255, 255, 0.842));
+  z-index: -1;
+}
+
 #main-container {
   padding: 10vw 12vw;
 }
@@ -31,9 +39,18 @@ body {
   margin-right: 3vw;
 }
 
-#rightbox {
-  margin-right:5vw;
+.underwhite {
+  background-color: white;
+  border-radius: 2pt;
+  padding-right: 0vw;
   width: 40vw;
+  background-position-y: 30vw;
+  float: right;
+
+}
+
+#rightbox {
+  //width: 40vw;
   float: right;
   background-position-y: 8vw;
   background-size: 100%;
@@ -41,9 +58,17 @@ body {
   background-repeat: no-repeat;
 }
 
+
+
 #text {
   padding: 10%;
-  padding-top:1vw;
+  padding-top:2.5vw;
+}
+
+#text h1{
+  color: #06365f;
+  font-weight: 500;
+  font-size: 20pt;
 }
 
 .clear {
