--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,23 +9,26 @@ body {
   margin: 0;
 }
 
+a{
+  text-decoration: none;
+}
 
 .background-blue {
-  position:fixed;
+  position: fixed;
   top: 0;
   left: 0;
-  height:45%;
-  width:100%;
+  height: 45%;
+  width: 100%;
   background: linear-gradient(0deg, #1c5380, #1c5380b9);
   z-index: -1;
 }
 
 .background-white {
-  position:fixed;
+  position: fixed;
   bottom: 0;
   left: 0;
-  height:55%;
-  width:100%;
+  height: 55%;
+  width: 100%;
   background: linear-gradient(0deg, white, rgba(255, 255, 255, 0.842));
   z-index: -1;
 }
@@ -42,30 +45,53 @@ body {
 .underwhite {
   background-color: white;
   border-radius: 2pt;
-  padding-right: 0vw;
   width: 40vw;
+  background-size: 80%;
   background-position-y: 30vw;
   float: right;
+}
+
+#right-side{
+  padding: 0 10%;
 
 }
 
-#rightbox {
+.over-box {
+  margin-bottom:10px;
+}
+
+#log-in-button {
+  float:right;
+  background: linear-gradient(180deg,#4b7699af, #4a779c);
+  padding: 10px;
+  border: 1px solid #1c5380;
+  border-radius: 4px;
+  margin-bottom:40px;
+}
+
+#log-in-button a {
+  color:  white;
+  text-shadow: 0 2px #4a779c;
+  font-weight: 600;
+}
+
+
+#white-box {
   //width: 40vw;
   float: right;
-  background-position-y: 8vw;
+  //background-position-y: 8vw;
+  padding: 2px;
   background-size: 100%;
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
 }
 
-
-
-#text {
-  padding: 10%;
-  padding-top:2.5vw;
+#white-box-content {
+  padding:10%;
+  padding-top: 2.5vw;
 }
 
-#text h1{
+#white-box-content h1 {
   color: #06365f;
   font-weight: 500;
   font-size: 20pt;
@@ -80,5 +106,15 @@ body {
 }
 
 nav {
-  margin:0 auto;
+  text-align: center;
+  margin: 0 10%;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 2pt;
+  font-size: 11pt;
+  color: rgb(155, 155, 155);
+}
+
+nav a{
+  color:#406c90;
 }
