--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,9 +1,3 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -20,6 +14,10 @@ body {
   left: 15%;
 }
 
+#phones-img {
+  width: 105%;
+}
+
 .main-container {
   position: absolute;
   top: 17%;
@@ -30,11 +28,17 @@ body {
 .home-container {
   float: right;
   width: 15%;
-  padding: 5px;
+  padding: 10px;
+  margin: 15px 50px 0 0;
   color: white;
   font-size: 0.8em;
   font-weight: bold;
   text-align: center;
+}
+
+#home-text {
+  display: inline;
+  margin-left: 10px;
 }
 
 .beveled {
@@ -62,6 +66,11 @@ body {
   margin: 30px 0;
 }
 
+.text-info-container b {
+  font-weight: bold;
+  color: #222
+}
+
 .info-container p {
   margin: 10px 0;
 }
@@ -72,7 +81,7 @@ body {
 
 .footer-container {
   text-align: center;
-  margin: 50px 0;
+  margin: 70px 0 40px 0;
 }
 
 .footer-container li {
