--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,30 +1,61 @@
 /*
 Colors to use:
 dark blue: #06365f
-light blue: #1c5380
-*/
+light blue: #1c5380*/
+
+
+
+
 
 header{
   background: url("../images/bgtile.png"); background-repeat: x;
-  height: 300px;
+  height: 450px;
 }
-.centerbox{
-  display: flex;
+
+/*.centerbox{
   width: 900px;
-  margin-top: -150px;
+  margin-top: -250px;
   background: red;
   margin-left: auto;
-  margin-right: auto;
- }
+  margin-right: auto;*/
+
 .phones{
-  
+  display: inline-block;
+  width: 14%;
+  margin-left: 15%;
+  margin-top: -200px;
 }
+
+/* .phones img {
+  width: 100%;
+  object-fit: cover;
+} */
+
 .instagram{
-  margin-left: 80px;
-  
+  display: inline-block;
+  width: 45%;
+  margin-left: 180px;
+  margin-top: -260px;
+  background: yellow;
+    
 }
-.second{
+.caja{
   background: url("../images/frame.png");
+  background-repeat: no-repeat;
+  height: 120px;
+  background: lightcoral;
+  text-align: left;
+  margin-bottom: 50px;
+}
+
+.boton{
+  display: inline-block;
+  width: 30%;
+  height: 30px;
+  margin-left: 100%;
+  margin-top: -60px;
+  background-color:#1c5380;
+  color: white;
   
 }
 
@@ -34,18 +65,58 @@ body {
 }
 
 h1{
-  font-family: 'Courier New', Courier, monospace; 
+  font-family: sans-serif;  
   color: #06365f;
+  font-size: 30px;
+  text-align: left;
+  margin-left: 40px;
+  margin-top: 90px;
 
 }
 p{
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
-  text-align: center;
+  font-family: sans-serif ; 
+  text-align: left;
   color: black;
   position: center;
+  text-justify: auto;
+  margin-left: 30px;
+}
+.text{
+  font-family: sans-serif;
+  text-align: left;
+  color: black;
+  font-size: 20px;
+  margin-left: 40px;
+}
+
+.text1{
+  font-family: sans-serif;
+  text-align: left;
+  color: black;
+  position: center;
+  text-justify: center;
+  margin-left: 30px;
+}
+.text2{
+  font-family: sans-serif;
+  text-align: left;
+  color: black;
+  position: center;
+  text-justify: center;
+  margin-left: 30px;
 
 }
 
-
+footer{
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 12px;
+  color: #19619c;
+  word-spacing: 2px;
+  margin-top: 50px;
+}
+.colorcopy{
+  color: grey;
+}
 
 
